--- a/src/bitcoin-tx-res.rc
+++ b/src/bitcoin-tx-res.rc
@@ -17,13 +17,13 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "Elements project"
-            VALUE "FileDescription",    "elements-tx (CLI Elements Core transaction editor utility)"
+            VALUE "FileDescription",    "liquid-tx (CLI Elements Core transaction editor utility)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "elements-tx"
+            VALUE "InternalName",       "liquid-tx"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "elements-tx.exe"
-            VALUE "ProductName",        "elements-tx"
+            VALUE "OriginalFilename",   "liquid-tx.exe"
+            VALUE "ProductName",        "liquid-tx"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
