--- a/src/bitcoind-res.rc
+++ b/src/bitcoind-res.rc
@@ -17,13 +17,13 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "Elements Project"
-            VALUE "FileDescription",    "elementsd (Elements Core node with a JSON-RPC server)"
+            VALUE "FileDescription",    "liquidd (Elements Core node with a JSON-RPC server)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "elementsd"
+            VALUE "InternalName",       "liquidd"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "elementsd.exe"
-            VALUE "ProductName",        "elementsd"
+            VALUE "OriginalFilename",   "liquidd.exe"
+            VALUE "ProductName",        "liquidd"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
