--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -28,7 +28,7 @@ packages:
 - "ca-certificates"
 - "python"
 remotes:
-- "url": "git@github.com:bitcoin/bitcoin.git"
+- "url": "https://github.com/ElementsProject/elements.git"
   "dir": "liquid"
 files: []
 script: |
