gitian: Disable QT build

--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -113,6 +113,9 @@ script: |
   chmod +x ${WRAP_DIR}/${prog}
   done
 
+  # Disable QT build
+  export NO_QT=1
+
   cd liquid
   BASEPREFIX=`pwd`/depends
   # Build dependencies for each host
