--- a/src/qt/res/bitcoin-qt-res.rc
+++ b/src/qt/res/bitcoin-qt-res.rc
@@ -20,7 +20,7 @@ BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
             VALUE "CompanyName",        "Elements project"
-            VALUE "FileDescription",    PACKAGE_NAME " (GUI node for Bitcoin)"
+            VALUE "FileDescription",    PACKAGE_NAME
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "liquid-qt"
             VALUE "LegalCopyright",     COPYRIGHT_STR
